# calcver-cli

./: .calcver.yml  .gitignore  .travis.yml  Cargo.toml  readme.md
src/: bin.rs  config.rs  config_file.rs  error.rs  lib.rs  main.rs  release.rs  repo.rs  repogit.rs  repository.rs  version.rs
