[dependencies]
clap = '2.29.2'
git2 = '0.6'
glob = '0.2.11'
libcalcver = '0.2.0-beta.3'
serde = '1.0'
serde_derive = '1.0'
serde_yaml = '0.7'
toml = '0.4'

[package]
authors = [
    'Jerahmeel Cosinas <me@jerahmeelcosinas.net>',
    'Joelle Ortiz <contact@joelleortiz.me>',
]
description = 'auto calculation of version based on http://conventionalcommits.org'
documentation = 'https://github.com/easy-semver/calcver-cli'
name = 'calcver'
repository = 'https://github.com/easy-semver/calcver-cli'
version = '0.1.0-alpha.22'
license = "Apache-2.0"
